@@ -4,7 +4,8 @@ CHANGELOG
 0.5.0
 -----
 
-* Upgrade pmd tile to use pmd 3.9.0
+* Upgrade pmd tile to use maven-pmd-plugin version 3.9.0
+* Allow overriding PMD version using property pmd.version (default 6.0.1)
 
 0.4.1
 -----
